--- a/internal/config/app-config.yml
+++ b/internal/config/app-config.yml
@@ -3,6 +3,6 @@ app-port: "1234"
 db: 
   port: "5432"
   host: "localhost"
-  name1: "postgres"
+  db-name: "go_messenger"
   user: "admin"
-  password: "admin"
+  password: "7618347o"
